<aside> to template

--- a/assets/css/cw.css
+++ b/assets/css/cw.css
@@ -253,35 +253,35 @@ textarea {
   margin-top: auto !important;
 }
 
-.me-0 {
+.mr-0 {
   margin-right: 0rem !important;
 }
 
-.me-5 {
+.mr-5 {
   margin-right: 0.3125rem !important;
 }
 
-.me-10 {
+.mr-10 {
   margin-right: 0.625rem !important;
 }
 
-.me-15 {
+.mr-15 {
   margin-right: 0.9375rem !important;
 }
 
-.me-20 {
+.mr-20 {
   margin-right: 1.25rem !important;
 }
 
-.me-30 {
+.mr-30 {
   margin-right: 1.875rem !important;
 }
 
-.me-40 {
+.mr-40 {
   margin-right: 2.5rem !important;
 }
 
-.me-auto {
+.mr-auto {
   margin-right: auto !important;
 }
 
@@ -317,35 +317,35 @@ textarea {
   margin-bottom: auto !important;
 }
 
-.ms-0 {
+.ml-0 {
   margin-left: 0rem !important;
 }
 
-.ms-5 {
+.ml-5 {
   margin-left: 0.3125rem !important;
 }
 
-.ms-10 {
+.ml-10 {
   margin-left: 0.625rem !important;
 }
 
-.ms-15 {
+.ml-15 {
   margin-left: 0.9375rem !important;
 }
 
-.ms-20 {
+.ml-20 {
   margin-left: 1.25rem !important;
 }
 
-.ms-30 {
+.ml-30 {
   margin-left: 1.875rem !important;
 }
 
-.ms-40 {
+.ml-40 {
   margin-left: 2.5rem !important;
 }
 
-.ms-auto {
+.ml-auto {
   margin-left: auto !important;
 }
 
@@ -493,35 +493,35 @@ textarea {
   padding-top: auto !important;
 }
 
-.pe-0 {
+.pr-0 {
   padding-right: 0rem !important;
 }
 
-.pe-5 {
+.pr-5 {
   padding-right: 0.3125rem !important;
 }
 
-.pe-10 {
+.pr-10 {
   padding-right: 0.625rem !important;
 }
 
-.pe-15 {
+.pr-15 {
   padding-right: 0.9375rem !important;
 }
 
-.pe-20 {
+.pr-20 {
   padding-right: 1.25rem !important;
 }
 
-.pe-30 {
+.pr-30 {
   padding-right: 1.875rem !important;
 }
 
-.pe-40 {
+.pr-40 {
   padding-right: 2.5rem !important;
 }
 
-.pe-auto {
+.pr-auto {
   padding-right: auto !important;
 }
 
@@ -557,43 +557,43 @@ textarea {
   padding-bottom: auto !important;
 }
 
-.ps-0 {
+.pl-0 {
   padding-left: 0rem !important;
 }
 
-.ps-5 {
+.pl-5 {
   padding-left: 0.3125rem !important;
 }
 
-.ps-10 {
+.pl-10 {
   padding-left: 0.625rem !important;
 }
 
-.ps-15 {
+.pl-15 {
   padding-left: 0.9375rem !important;
 }
 
-.ps-20 {
+.pl-20 {
   padding-left: 1.25rem !important;
 }
 
-.ps-30 {
+.pl-30 {
   padding-left: 1.875rem !important;
 }
 
-.ps-40 {
+.pl-40 {
   padding-left: 2.5rem !important;
 }
 
-.ps-auto {
+.pl-auto {
   padding-left: auto !important;
 }
 
-.text-start {
+.text-left {
   text-align: left !important;
 }
 
-.text-end {
+.text-right {
   text-align: right !important;
 }
 
@@ -714,28 +714,28 @@ textarea {
   .mt-xs-auto {
     margin-top: auto !important;
   }
-  .me-xs-0 {
+  .mr-xs-0 {
     margin-right: 0rem !important;
   }
-  .me-xs-5 {
+  .mr-xs-5 {
     margin-right: 0.3125rem !important;
   }
-  .me-xs-10 {
+  .mr-xs-10 {
     margin-right: 0.625rem !important;
   }
-  .me-xs-15 {
+  .mr-xs-15 {
     margin-right: 0.9375rem !important;
   }
-  .me-xs-20 {
+  .mr-xs-20 {
     margin-right: 1.25rem !important;
   }
-  .me-xs-30 {
+  .mr-xs-30 {
     margin-right: 1.875rem !important;
   }
-  .me-xs-40 {
+  .mr-xs-40 {
     margin-right: 2.5rem !important;
   }
-  .me-xs-auto {
+  .mr-xs-auto {
     margin-right: auto !important;
   }
   .mb-xs-0 {
@@ -762,28 +762,28 @@ textarea {
   .mb-xs-auto {
     margin-bottom: auto !important;
   }
-  .ms-xs-0 {
+  .ml-xs-0 {
     margin-left: 0rem !important;
   }
-  .ms-xs-5 {
+  .ml-xs-5 {
     margin-left: 0.3125rem !important;
   }
-  .ms-xs-10 {
+  .ml-xs-10 {
     margin-left: 0.625rem !important;
   }
-  .ms-xs-15 {
+  .ml-xs-15 {
     margin-left: 0.9375rem !important;
   }
-  .ms-xs-20 {
+  .ml-xs-20 {
     margin-left: 1.25rem !important;
   }
-  .ms-xs-30 {
+  .ml-xs-30 {
     margin-left: 1.875rem !important;
   }
-  .ms-xs-40 {
+  .ml-xs-40 {
     margin-left: 2.5rem !important;
   }
-  .ms-xs-auto {
+  .ml-xs-auto {
     margin-left: auto !important;
   }
   .p-xs-0 {
@@ -898,28 +898,28 @@ textarea {
   .pt-xs-auto {
     padding-top: auto !important;
   }
-  .pe-xs-0 {
+  .pr-xs-0 {
     padding-right: 0rem !important;
   }
-  .pe-xs-5 {
+  .pr-xs-5 {
     padding-right: 0.3125rem !important;
   }
-  .pe-xs-10 {
+  .pr-xs-10 {
     padding-right: 0.625rem !important;
   }
-  .pe-xs-15 {
+  .pr-xs-15 {
     padding-right: 0.9375rem !important;
   }
-  .pe-xs-20 {
+  .pr-xs-20 {
     padding-right: 1.25rem !important;
   }
-  .pe-xs-30 {
+  .pr-xs-30 {
     padding-right: 1.875rem !important;
   }
-  .pe-xs-40 {
+  .pr-xs-40 {
     padding-right: 2.5rem !important;
   }
-  .pe-xs-auto {
+  .pr-xs-auto {
     padding-right: auto !important;
   }
   .pb-xs-0 {
@@ -946,34 +946,34 @@ textarea {
   .pb-xs-auto {
     padding-bottom: auto !important;
   }
-  .ps-xs-0 {
+  .pl-xs-0 {
     padding-left: 0rem !important;
   }
-  .ps-xs-5 {
+  .pl-xs-5 {
     padding-left: 0.3125rem !important;
   }
-  .ps-xs-10 {
+  .pl-xs-10 {
     padding-left: 0.625rem !important;
   }
-  .ps-xs-15 {
+  .pl-xs-15 {
     padding-left: 0.9375rem !important;
   }
-  .ps-xs-20 {
+  .pl-xs-20 {
     padding-left: 1.25rem !important;
   }
-  .ps-xs-30 {
+  .pl-xs-30 {
     padding-left: 1.875rem !important;
   }
-  .ps-xs-40 {
+  .pl-xs-40 {
     padding-left: 2.5rem !important;
   }
-  .ps-xs-auto {
+  .pl-xs-auto {
     padding-left: auto !important;
   }
-  .text-xs-start {
+  .text-xs-left {
     text-align: left !important;
   }
-  .text-xs-end {
+  .text-xs-right {
     text-align: right !important;
   }
   .text-xs-center {
@@ -1094,28 +1094,28 @@ textarea {
   .mt-sm-auto {
     margin-top: auto !important;
   }
-  .me-sm-0 {
+  .mr-sm-0 {
     margin-right: 0rem !important;
   }
-  .me-sm-5 {
+  .mr-sm-5 {
     margin-right: 0.3125rem !important;
   }
-  .me-sm-10 {
+  .mr-sm-10 {
     margin-right: 0.625rem !important;
   }
-  .me-sm-15 {
+  .mr-sm-15 {
     margin-right: 0.9375rem !important;
   }
-  .me-sm-20 {
+  .mr-sm-20 {
     margin-right: 1.25rem !important;
   }
-  .me-sm-30 {
+  .mr-sm-30 {
     margin-right: 1.875rem !important;
   }
-  .me-sm-40 {
+  .mr-sm-40 {
     margin-right: 2.5rem !important;
   }
-  .me-sm-auto {
+  .mr-sm-auto {
     margin-right: auto !important;
   }
   .mb-sm-0 {
@@ -1142,28 +1142,28 @@ textarea {
   .mb-sm-auto {
     margin-bottom: auto !important;
   }
-  .ms-sm-0 {
+  .ml-sm-0 {
     margin-left: 0rem !important;
   }
-  .ms-sm-5 {
+  .ml-sm-5 {
     margin-left: 0.3125rem !important;
   }
-  .ms-sm-10 {
+  .ml-sm-10 {
     margin-left: 0.625rem !important;
   }
-  .ms-sm-15 {
+  .ml-sm-15 {
     margin-left: 0.9375rem !important;
   }
-  .ms-sm-20 {
+  .ml-sm-20 {
     margin-left: 1.25rem !important;
   }
-  .ms-sm-30 {
+  .ml-sm-30 {
     margin-left: 1.875rem !important;
   }
-  .ms-sm-40 {
+  .ml-sm-40 {
     margin-left: 2.5rem !important;
   }
-  .ms-sm-auto {
+  .ml-sm-auto {
     margin-left: auto !important;
   }
   .p-sm-0 {
@@ -1278,28 +1278,28 @@ textarea {
   .pt-sm-auto {
     padding-top: auto !important;
   }
-  .pe-sm-0 {
+  .pr-sm-0 {
     padding-right: 0rem !important;
   }
-  .pe-sm-5 {
+  .pr-sm-5 {
     padding-right: 0.3125rem !important;
   }
-  .pe-sm-10 {
+  .pr-sm-10 {
     padding-right: 0.625rem !important;
   }
-  .pe-sm-15 {
+  .pr-sm-15 {
     padding-right: 0.9375rem !important;
   }
-  .pe-sm-20 {
+  .pr-sm-20 {
     padding-right: 1.25rem !important;
   }
-  .pe-sm-30 {
+  .pr-sm-30 {
     padding-right: 1.875rem !important;
   }
-  .pe-sm-40 {
+  .pr-sm-40 {
     padding-right: 2.5rem !important;
   }
-  .pe-sm-auto {
+  .pr-sm-auto {
     padding-right: auto !important;
   }
   .pb-sm-0 {
@@ -1326,34 +1326,34 @@ textarea {
   .pb-sm-auto {
     padding-bottom: auto !important;
   }
-  .ps-sm-0 {
+  .pl-sm-0 {
     padding-left: 0rem !important;
   }
-  .ps-sm-5 {
+  .pl-sm-5 {
     padding-left: 0.3125rem !important;
   }
-  .ps-sm-10 {
+  .pl-sm-10 {
     padding-left: 0.625rem !important;
   }
-  .ps-sm-15 {
+  .pl-sm-15 {
     padding-left: 0.9375rem !important;
   }
-  .ps-sm-20 {
+  .pl-sm-20 {
     padding-left: 1.25rem !important;
   }
-  .ps-sm-30 {
+  .pl-sm-30 {
     padding-left: 1.875rem !important;
   }
-  .ps-sm-40 {
+  .pl-sm-40 {
     padding-left: 2.5rem !important;
   }
-  .ps-sm-auto {
+  .pl-sm-auto {
     padding-left: auto !important;
   }
-  .text-sm-start {
+  .text-sm-left {
     text-align: left !important;
   }
-  .text-sm-end {
+  .text-sm-right {
     text-align: right !important;
   }
   .text-sm-center {
@@ -1474,28 +1474,28 @@ textarea {
   .mt-md-auto {
     margin-top: auto !important;
   }
-  .me-md-0 {
+  .mr-md-0 {
     margin-right: 0rem !important;
   }
-  .me-md-5 {
+  .mr-md-5 {
     margin-right: 0.3125rem !important;
   }
-  .me-md-10 {
+  .mr-md-10 {
     margin-right: 0.625rem !important;
   }
-  .me-md-15 {
+  .mr-md-15 {
     margin-right: 0.9375rem !important;
   }
-  .me-md-20 {
+  .mr-md-20 {
     margin-right: 1.25rem !important;
   }
-  .me-md-30 {
+  .mr-md-30 {
     margin-right: 1.875rem !important;
   }
-  .me-md-40 {
+  .mr-md-40 {
     margin-right: 2.5rem !important;
   }
-  .me-md-auto {
+  .mr-md-auto {
     margin-right: auto !important;
   }
   .mb-md-0 {
@@ -1522,28 +1522,28 @@ textarea {
   .mb-md-auto {
     margin-bottom: auto !important;
   }
-  .ms-md-0 {
+  .ml-md-0 {
     margin-left: 0rem !important;
   }
-  .ms-md-5 {
+  .ml-md-5 {
     margin-left: 0.3125rem !important;
   }
-  .ms-md-10 {
+  .ml-md-10 {
     margin-left: 0.625rem !important;
   }
-  .ms-md-15 {
+  .ml-md-15 {
     margin-left: 0.9375rem !important;
   }
-  .ms-md-20 {
+  .ml-md-20 {
     margin-left: 1.25rem !important;
   }
-  .ms-md-30 {
+  .ml-md-30 {
     margin-left: 1.875rem !important;
   }
-  .ms-md-40 {
+  .ml-md-40 {
     margin-left: 2.5rem !important;
   }
-  .ms-md-auto {
+  .ml-md-auto {
     margin-left: auto !important;
   }
   .p-md-0 {
@@ -1658,28 +1658,28 @@ textarea {
   .pt-md-auto {
     padding-top: auto !important;
   }
-  .pe-md-0 {
+  .pr-md-0 {
     padding-right: 0rem !important;
   }
-  .pe-md-5 {
+  .pr-md-5 {
     padding-right: 0.3125rem !important;
   }
-  .pe-md-10 {
+  .pr-md-10 {
     padding-right: 0.625rem !important;
   }
-  .pe-md-15 {
+  .pr-md-15 {
     padding-right: 0.9375rem !important;
   }
-  .pe-md-20 {
+  .pr-md-20 {
     padding-right: 1.25rem !important;
   }
-  .pe-md-30 {
+  .pr-md-30 {
     padding-right: 1.875rem !important;
   }
-  .pe-md-40 {
+  .pr-md-40 {
     padding-right: 2.5rem !important;
   }
-  .pe-md-auto {
+  .pr-md-auto {
     padding-right: auto !important;
   }
   .pb-md-0 {
@@ -1706,34 +1706,34 @@ textarea {
   .pb-md-auto {
     padding-bottom: auto !important;
   }
-  .ps-md-0 {
+  .pl-md-0 {
     padding-left: 0rem !important;
   }
-  .ps-md-5 {
+  .pl-md-5 {
     padding-left: 0.3125rem !important;
   }
-  .ps-md-10 {
+  .pl-md-10 {
     padding-left: 0.625rem !important;
   }
-  .ps-md-15 {
+  .pl-md-15 {
     padding-left: 0.9375rem !important;
   }
-  .ps-md-20 {
+  .pl-md-20 {
     padding-left: 1.25rem !important;
   }
-  .ps-md-30 {
+  .pl-md-30 {
     padding-left: 1.875rem !important;
   }
-  .ps-md-40 {
+  .pl-md-40 {
     padding-left: 2.5rem !important;
   }
-  .ps-md-auto {
+  .pl-md-auto {
     padding-left: auto !important;
   }
-  .text-md-start {
+  .text-md-left {
     text-align: left !important;
   }
-  .text-md-end {
+  .text-md-right {
     text-align: right !important;
   }
   .text-md-center {
@@ -1854,28 +1854,28 @@ textarea {
   .mt-lg-auto {
     margin-top: auto !important;
   }
-  .me-lg-0 {
+  .mr-lg-0 {
     margin-right: 0rem !important;
   }
-  .me-lg-5 {
+  .mr-lg-5 {
     margin-right: 0.3125rem !important;
   }
-  .me-lg-10 {
+  .mr-lg-10 {
     margin-right: 0.625rem !important;
   }
-  .me-lg-15 {
+  .mr-lg-15 {
     margin-right: 0.9375rem !important;
   }
-  .me-lg-20 {
+  .mr-lg-20 {
     margin-right: 1.25rem !important;
   }
-  .me-lg-30 {
+  .mr-lg-30 {
     margin-right: 1.875rem !important;
   }
-  .me-lg-40 {
+  .mr-lg-40 {
     margin-right: 2.5rem !important;
   }
-  .me-lg-auto {
+  .mr-lg-auto {
     margin-right: auto !important;
   }
   .mb-lg-0 {
@@ -1902,28 +1902,28 @@ textarea {
   .mb-lg-auto {
     margin-bottom: auto !important;
   }
-  .ms-lg-0 {
+  .ml-lg-0 {
     margin-left: 0rem !important;
   }
-  .ms-lg-5 {
+  .ml-lg-5 {
     margin-left: 0.3125rem !important;
   }
-  .ms-lg-10 {
+  .ml-lg-10 {
     margin-left: 0.625rem !important;
   }
-  .ms-lg-15 {
+  .ml-lg-15 {
     margin-left: 0.9375rem !important;
   }
-  .ms-lg-20 {
+  .ml-lg-20 {
     margin-left: 1.25rem !important;
   }
-  .ms-lg-30 {
+  .ml-lg-30 {
     margin-left: 1.875rem !important;
   }
-  .ms-lg-40 {
+  .ml-lg-40 {
     margin-left: 2.5rem !important;
   }
-  .ms-lg-auto {
+  .ml-lg-auto {
     margin-left: auto !important;
   }
   .p-lg-0 {
@@ -2038,28 +2038,28 @@ textarea {
   .pt-lg-auto {
     padding-top: auto !important;
   }
-  .pe-lg-0 {
+  .pr-lg-0 {
     padding-right: 0rem !important;
   }
-  .pe-lg-5 {
+  .pr-lg-5 {
     padding-right: 0.3125rem !important;
   }
-  .pe-lg-10 {
+  .pr-lg-10 {
     padding-right: 0.625rem !important;
   }
-  .pe-lg-15 {
+  .pr-lg-15 {
     padding-right: 0.9375rem !important;
   }
-  .pe-lg-20 {
+  .pr-lg-20 {
     padding-right: 1.25rem !important;
   }
-  .pe-lg-30 {
+  .pr-lg-30 {
     padding-right: 1.875rem !important;
   }
-  .pe-lg-40 {
+  .pr-lg-40 {
     padding-right: 2.5rem !important;
   }
-  .pe-lg-auto {
+  .pr-lg-auto {
     padding-right: auto !important;
   }
   .pb-lg-0 {
@@ -2086,34 +2086,34 @@ textarea {
   .pb-lg-auto {
     padding-bottom: auto !important;
   }
-  .ps-lg-0 {
+  .pl-lg-0 {
     padding-left: 0rem !important;
   }
-  .ps-lg-5 {
+  .pl-lg-5 {
     padding-left: 0.3125rem !important;
   }
-  .ps-lg-10 {
+  .pl-lg-10 {
     padding-left: 0.625rem !important;
   }
-  .ps-lg-15 {
+  .pl-lg-15 {
     padding-left: 0.9375rem !important;
   }
-  .ps-lg-20 {
+  .pl-lg-20 {
     padding-left: 1.25rem !important;
   }
-  .ps-lg-30 {
+  .pl-lg-30 {
     padding-left: 1.875rem !important;
   }
-  .ps-lg-40 {
+  .pl-lg-40 {
     padding-left: 2.5rem !important;
   }
-  .ps-lg-auto {
+  .pl-lg-auto {
     padding-left: auto !important;
   }
-  .text-lg-start {
+  .text-lg-left {
     text-align: left !important;
   }
-  .text-lg-end {
+  .text-lg-right {
     text-align: right !important;
   }
   .text-lg-center {
@@ -2234,28 +2234,28 @@ textarea {
   .mt-xl-auto {
     margin-top: auto !important;
   }
-  .me-xl-0 {
+  .mr-xl-0 {
     margin-right: 0rem !important;
   }
-  .me-xl-5 {
+  .mr-xl-5 {
     margin-right: 0.3125rem !important;
   }
-  .me-xl-10 {
+  .mr-xl-10 {
     margin-right: 0.625rem !important;
   }
-  .me-xl-15 {
+  .mr-xl-15 {
     margin-right: 0.9375rem !important;
   }
-  .me-xl-20 {
+  .mr-xl-20 {
     margin-right: 1.25rem !important;
   }
-  .me-xl-30 {
+  .mr-xl-30 {
     margin-right: 1.875rem !important;
   }
-  .me-xl-40 {
+  .mr-xl-40 {
     margin-right: 2.5rem !important;
   }
-  .me-xl-auto {
+  .mr-xl-auto {
     margin-right: auto !important;
   }
   .mb-xl-0 {
@@ -2282,28 +2282,28 @@ textarea {
   .mb-xl-auto {
     margin-bottom: auto !important;
   }
-  .ms-xl-0 {
+  .ml-xl-0 {
     margin-left: 0rem !important;
   }
-  .ms-xl-5 {
+  .ml-xl-5 {
     margin-left: 0.3125rem !important;
   }
-  .ms-xl-10 {
+  .ml-xl-10 {
     margin-left: 0.625rem !important;
   }
-  .ms-xl-15 {
+  .ml-xl-15 {
     margin-left: 0.9375rem !important;
   }
-  .ms-xl-20 {
+  .ml-xl-20 {
     margin-left: 1.25rem !important;
   }
-  .ms-xl-30 {
+  .ml-xl-30 {
     margin-left: 1.875rem !important;
   }
-  .ms-xl-40 {
+  .ml-xl-40 {
     margin-left: 2.5rem !important;
   }
-  .ms-xl-auto {
+  .ml-xl-auto {
     margin-left: auto !important;
   }
   .p-xl-0 {
@@ -2418,28 +2418,28 @@ textarea {
   .pt-xl-auto {
     padding-top: auto !important;
   }
-  .pe-xl-0 {
+  .pr-xl-0 {
     padding-right: 0rem !important;
   }
-  .pe-xl-5 {
+  .pr-xl-5 {
     padding-right: 0.3125rem !important;
   }
-  .pe-xl-10 {
+  .pr-xl-10 {
     padding-right: 0.625rem !important;
   }
-  .pe-xl-15 {
+  .pr-xl-15 {
     padding-right: 0.9375rem !important;
   }
-  .pe-xl-20 {
+  .pr-xl-20 {
     padding-right: 1.25rem !important;
   }
-  .pe-xl-30 {
+  .pr-xl-30 {
     padding-right: 1.875rem !important;
   }
-  .pe-xl-40 {
+  .pr-xl-40 {
     padding-right: 2.5rem !important;
   }
-  .pe-xl-auto {
+  .pr-xl-auto {
     padding-right: auto !important;
   }
   .pb-xl-0 {
@@ -2466,34 +2466,34 @@ textarea {
   .pb-xl-auto {
     padding-bottom: auto !important;
   }
-  .ps-xl-0 {
+  .pl-xl-0 {
     padding-left: 0rem !important;
   }
-  .ps-xl-5 {
+  .pl-xl-5 {
     padding-left: 0.3125rem !important;
   }
-  .ps-xl-10 {
+  .pl-xl-10 {
     padding-left: 0.625rem !important;
   }
-  .ps-xl-15 {
+  .pl-xl-15 {
     padding-left: 0.9375rem !important;
   }
-  .ps-xl-20 {
+  .pl-xl-20 {
     padding-left: 1.25rem !important;
   }
-  .ps-xl-30 {
+  .pl-xl-30 {
     padding-left: 1.875rem !important;
   }
-  .ps-xl-40 {
+  .pl-xl-40 {
     padding-left: 2.5rem !important;
   }
-  .ps-xl-auto {
+  .pl-xl-auto {
     padding-left: auto !important;
   }
-  .text-xl-start {
+  .text-xl-left {
     text-align: left !important;
   }
-  .text-xl-end {
+  .text-xl-right {
     text-align: right !important;
   }
   .text-xl-center {
