--- a/assets/sass/_utilities.scss
+++ b/assets/sass/_utilities.scss
@@ -53,7 +53,7 @@ $utilities: map-merge(
     "margin-end": (
       responsive: true,
       property: margin-right,
-      class: me,
+      class: mr,
       values:
         map-merge(
           $spacers,
@@ -77,7 +77,7 @@ $utilities: map-merge(
     "margin-start": (
       responsive: true,
       property: margin-left,
-      class: ms,
+      class: ml,
       values:
         map-merge(
           $spacers,
@@ -114,7 +114,7 @@ $utilities: map-merge(
     "padding-end": (
       responsive: true,
       property: padding-right,
-      class: pe,
+      class: pr,
       values: $spacers,
     ),
     "padding-bottom": (
@@ -126,7 +126,7 @@ $utilities: map-merge(
     "padding-start": (
       responsive: true,
       property: padding-left,
-      class: ps,
+      class: pl,
       values: $spacers,
     ),
     "text-align": (
@@ -134,8 +134,8 @@ $utilities: map-merge(
       property: text-align,
       class: text,
       values: (
-        start: left,
-        end: right,
+        left: left,
+        right: right,
         center: center,
       ),
     ),
