--- a/assets/sass/cw.scss
+++ b/assets/sass/cw.scss
@@ -12,7 +12,11 @@
 @import "logo";
 @import "footer";
 
+@import "component/accordion";
 @import "component/button";
+@import "component/checkbox";
+@import "component/pagination";
+@import "component/radio";
 @import "component/tab";
 
 hr {
