--- a/assets/sass/_utilities.scss
+++ b/assets/sass/_utilities.scss
@@ -1,6 +1,13 @@
 $utilities: () !default;
 $utilities: map-merge(
   (
+    "display": (
+      responsive: true,
+      print: true,
+      property: display,
+      class: d,
+      values: inline inline-block block grid table table-row table-cell flex inline-flex none
+    ),
     "margin":
       (
         responsive: true,
